{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 145,
  "lineage": "d39cd0df-3284-b2e3-228b-6ae158e46ffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:internet-gateway/igw-0a6b6831153b76974",
            "id": "igw-0a6b6831153b76974",
            "owner_id": "700746417709",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0ec5aa341f86b58f4"
          },
          "dependencies": [
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:network-interface/eni-0c5ff81a78a174039",
            "id": "eni-0c5ff81a78a174039",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0a:01:31:12:e8",
            "owner_id": "700746417709",
            "private_dns_name": "ip-10-0-0-90.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.90",
            "private_ip_list": [
              "10.0.0.90"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.90"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f6f26ed0fef9a6f0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c712557fbf924c4"
          },
          "dependencies": [
            "aws_subnet.public_sub_1",
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:route-table/rtb-02328507aa02d5ffb",
            "id": "rtb-02328507aa02d5ffb",
            "owner_id": "700746417709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6b6831153b76974",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_rt"
            },
            "tags_all": {
              "Name": "my_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec5aa341f86b58f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2e15ba12d385230",
            "route_table_id": "rtb-02328507aa02d5ffb",
            "subnet_id": "subnet-04c712557fbf924c4"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_rt",
            "aws_subnet.public_sub_1",
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:security-group/sg-035db90ebe529b4f6",
            "description": "This is for my testing with all trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035db90ebe529b4f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": " my_sg_1",
            "name_prefix": "",
            "owner_id": "700746417709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg_1"
            },
            "tags_all": {
              "Name": "my_sg_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec5aa341f86b58f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:subnet/subnet-04c712557fbf924c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c712557fbf924c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700746417709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub_1"
            },
            "tags_all": {
              "Name": "public_sub_1"
            },
            "vpc_id": "vpc-0ec5aa341f86b58f4"
          },
          "dependencies": [
            "aws_vpc.NEW_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "NEW_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:700746417709:vpc/vpc-0ec5aa341f86b58f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069ee075a604f53ed",
            "default_route_table_id": "rtb-07380108a358c9b01",
            "default_security_group_id": "sg-0f6f26ed0fef9a6f0",
            "dhcp_options_id": "dopt-09ca00c6da0816bcc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec5aa341f86b58f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07380108a358c9b01",
            "owner_id": "700746417709",
            "tags": {
              "Name": "NEW_VPC"
            },
            "tags_all": {
              "Name": "NEW_VPC"
            }
          }
        }
      ]
    }
  ]
}